# utopia

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.claude/plans/: create_dataset.md  create_spark_job.md
data/: dataset_B.parquet
data/processed/1dataset_C/: .part-00000-fe6f3e23-e5d9-4216-97f5-4a37b6f367fe-c000.snappy.parquet.crc  part-00000-fe6f3e23-e5d9-4216-97f5-4a37b6f367fe-c000.snappy.parquet
data/raw/: 1dataset_A.parquet  1dataset_B.parquet
src/utopia/create_dataset/: create_dataset.py
src/utopia/process_event/: process_event.py  variables.py
tests/: conftest.py
tests/integration/: test_process_event_integration.py
tests/unit/: test_process_event.py
