[project]
name = "utopia"
version = "0.1.0"
description = ""
authors = [
    {name = "Joanne Lee"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark (>=4.1.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "utopia_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-bugbear (>=25.11.29,<26.0.0)",
    "flake8-isort (>=7.0.0,<8.0.0)"
]
create_data = [
    "pandas (>=3.0.2,<4.0.0)",
    "faker (>=40.15.0,<41.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)"
]
